<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/budget_layout_name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/budget_form_name"
            app:errorEnabled="true"
            app:helperText="@string/helper_required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/budget_create_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/budget_create_layout_email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/budget_form_email"
            app:errorEnabled="true"
            app:helperText="@string/helper_required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budget_layout_name_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/budget_create_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/budget_create_layout_phone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/budget_form_phone"
            app:errorEnabled="true"
            app:helperText="@string/helper_required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budget_create_layout_email_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/budget_create_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/budget_create_layout_location_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/budget_form_location"
            android:labelFor="@+id/budget_create_layout_location"
            app:errorEnabled="true"
            app:helperText="@string/helper_required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budget_create_layout_phone_container">

            <AutoCompleteTextView
                android:id="@+id/budget_create_layout_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingTop="28dp"
                android:paddingEnd="12dp"
                android:paddingBottom="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/budget_create_layout_category_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/budget_form_category"
            android:labelFor="@+id/budget_create_layout_category"
            app:errorEnabled="true"
            app:helperText="@string/helper_required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budget_create_layout_location_container">

            <AutoCompleteTextView
                android:id="@+id/budget_create_layout_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/budget_create_layout_subcategory_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/budget_form_subcategory"
            android:labelFor="@+id/budget_create_layout_subcategory"
            android:visibility="gone"
            app:errorEnabled="true"
            app:helperText="@string/helper_required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budget_create_layout_category_container">

            <AutoCompleteTextView
                android:id="@+id/budget_create_layout_subcategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/budget_create_layout_description_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/budget_form_description"
            app:errorEnabled="true"
            app:helperText="@string/helper_required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budget_create_layout_subcategory_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/budget_create_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="3" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
