<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/budget_row_layout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Antonio" />

            <TextView
                android:id="@+id/budget_row_layout_hyphen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/hyphen"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/budget_row_layout_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/budget_row_layout_subcategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/budget_row_layout_hyphen"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Mudanzas Viviendas" />

            <TextView
                android:id="@+id/budget_row_layout_phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/budget_item_phone"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/budget_row_layout_subcategory" />

            <TextView
                android:id="@+id/budget_row_layout_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/budget_row_layout_phone_title"
                app:layout_constraintTop_toTopOf="@id/budget_row_layout_phone_title"
                tools:text="652863369" />

            <TextView
                android:id="@+id/budget_row_layout_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/budget_item_email"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/budget_row_layout_phone" />

            <TextView
                android:id="@+id/budget_row_layout_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/budget_row_layout_phone_title"
                app:layout_constraintTop_toTopOf="@id/budget_row_layout_email_title"
                tools:text="aa@bb.cc" />

            <TextView
                android:id="@+id/budget_row_layout_city_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/budget_item_city"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/budget_row_layout_email" />

            <TextView
                android:id="@+id/budget_row_layout_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/budget_row_layout_city_title"
                app:layout_constraintTop_toTopOf="@id/budget_row_layout_city_title"
                tools:text="Guadassuar 46610" />

            <TextView
                android:id="@+id/budget_row_layout_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/budget_item_description"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/budget_row_layout_city" />

            <TextView
                android:id="@+id/budget_row_layout_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/budget_row_layout_description_title"
                tools:text="Taco cat backwards spells taco cat terrorize the hundred-and-twenty-pound rottweiler and steal his bed, not sorry or nap all day mrow who's the baby, for cat sit like bread. Humans,humans, humans oh how much they love us felines we are the center of attention they feed, they clean meow to be let out and find empty spot in cupboard and sleep all day sleep or i love cuddles." />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</FrameLayout>